# tournament

./: README.md  stack.yaml  tournament.cabal
app/: Functional.hs  Main.hs  Procedural.hs
app_cxx/: Functional.cxx  Procedural.cxx
proclang/: t.c  t.cpp  t.swift  tf.cpp
src/Mitsuji/Tournament/: Functional.hs  Procedural.hs
