name:                tournament
version:             0.2.0.0
synopsis:            simple tournament model
description:         Please see README.md
homepage:            https://github.com/mitsuji/tournament#readme
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
copyright:           2016 Takamasa Mitsuji
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mitsuji.Tournament.Functional
                     , Mitsuji.Tournament.Procedural
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
  default-language:    Haskell2010

executable tournament-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tournament
  default-language:    Haskell2010

test-suite tournament-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tournament
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitsuji/tournament
