name:                tournament
version:             0.2.1.0
synopsis:            simple tournament model
description:         Please see README.md
homepage:            https://github.com/mitsuji/tournament#readme
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
copyright:           2016 Takamasa Mitsuji
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable tournament-proc-exe
  hs-source-dirs:      app
  main-is:             Procedural.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
  default-language:    Haskell2010

executable tournament-func-exe
  hs-source-dirs:      app
  main-is:             Functional.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitsuji/tournament
